updating to 1.8 with spigot