@@ -1,2 +1,2 @@
 #!/bin/bash
-java -Xmx1024M -Xms1024M -classpath "scala-library-2.10.2.jar:craftbukkit.jar" org.bukkit.craftbukkit.Main
+java -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -classpath "scala-library-2.10.2.jar:spigot.jar" -jar spigot.jar
